deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: "mongo"
  replicas: 3
  template:
    metadata:
      labels:
        role: mongo
        environment: test
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image:  mongo:4.0
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--smallfiles"
            - "--noprealloc"
            - "--bind_ip_all"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
        - name: mongo-sidecar
          image: cvallance/mongo-k8s-sidecar
  volumeClaimTemplates:
  - metadata:
      name: mongo-persistent-storage
      annotations:
        volume.beta.kubernetes.io/storage-class: "fast"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mutants-api
spec:
  selector:
    matchLabels:
      app: mutants-api
  replicas: 3
  template:
    metadata:
      labels:
        app: mutants-api
    spec:
      containers:
      - name: mutants-api
        image: gstnsilva/mutants:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: secret-appsettings
---
apiVersion: v1
kind: Service
metadata:
  name: mutants-api-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mutants-api
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mutants-api-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: mutants-api.907515d351e54d859285.eastus2.aksapp.io
    http:
      paths:
      - backend:
          serviceName: mutants-api-backend
          servicePort: 80
# ingress at mutants-api.907515d351e54d859285.eastus2.aksapp.io
